Bug 351581 - Text on node widgets reaches widget borders
Summary: Text on node widgets reaches widget borders
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.3 (KDE Applications 15.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-21 19:00 UTC by Ralf Habacker
Modified: 2015-08-21 19:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.1 (KDE Applications 15.08.1)
Sentry Crash Report:


Attachments
screenshot (1.72 KB, image/png)
2015-08-21 19:01 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-08-21 19:00:43 UTC
As shown from the appended screenshot there is no margin between the text and the border of the node widget. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add deployment diagram
3. add node widget

Actual Results:  
The text reaches the widget border

Expected Results:  
The text should not reach the widget border.
Comment 1 Ralf Habacker 2015-08-21 19:01:16 UTC
Created attachment 94153 [details]
screenshot
Comment 2 Ralf Habacker 2015-08-21 19:05:52 UTC
Git commit 4c8a3b0143c58c4a5f486d6e45bcb656a574e397 by Ralf Habacker.
Committed on 21/08/2015 at 19:05.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'Text on node widgets reaches widget borders'.

This commit adds a const variable UMLWidget::defaultMargin,
which holds the default widget margin.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +1    -1    umbrello/widgets/nodewidget.cpp
M  +1    -0    umbrello/widgets/umlwidget.cpp
M  +1    -0    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/4c8a3b0143c58c4a5f486d6e45bcb656a574e397