Fix 'Text on node widgets reaches widget borders'.

This commit adds a const variable UMLWidget::defaultMargin,
which holds the default widget margin.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)
BUG:351581